--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -91,7 +91,7 @@ markdown_extensions:
   - pymdownx.magiclink:
       repo_url_shorthand: true
       user: leovan
-      repo: cytoscape-manual-zh
+      repo: hive-functions
   - pymdownx.mark
   - pymdownx.smartsymbols
   - pymdownx.superfences:
