--- a/pom.xml
+++ b/pom.xml
@@ -27,8 +27,9 @@
         <hadoop.version>2.10.1</hadoop.version>
 
         <guava.version>30.1.1-jre</guava.version>
-
         <jackson.version>2.12.2</jackson.version>
+        <spatial4j.version>0.8</spatial4j.version>
+        <jts.verion>1.18.0</jts.verion>
     </properties>
 
     <dependencies>
@@ -97,6 +98,28 @@
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-jaxb-annotations</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.spatial4j</groupId>
+            <artifactId>spatial4j</artifactId>
+            <version>${spatial4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts</artifactId>
+            <version>${jts.verion}</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>${jts.verion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-modules</artifactId>
+            <version>${jts.verion}</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
