--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
     <packaging>jar</packaging>
     <version>1.0.0</version>
 
+    <repositories>
+        <repository>
+            <id>spring-plugin</id>
+            <url>https://repo.spring.io/plugins-release/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <java.version>1.8</java.version>
         <project.encoding>UTF-8</project.encoding>
