--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,9 +15,10 @@ copyright: 版权所有 &copy; 2001-2023, Leo Van | 范叶亮
 # Navigation
 nav:
   - 主页: index.md
-  - 设备相关函数: device-functions.md
+  - 网络相关函数: network-functions.md
   - 地理相关函数: geo-functions.md
   - JSON 相关函数: json-functions.md
+  - 文本相关函数: text-functions.md
 
 # Theme
 theme:
