--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,14 +10,15 @@ repo_url: https://github.com/leovan/hive-functions
 edit_uri: edit/main/docs/
 
 # Copyright
-copyright: 版权所有 &copy; 2001-2023, Leo Van | 范叶亮
+copyright: 版权所有 &copy; 2021-2023, Leo Van | 范叶亮
 
 # Navigation
 nav:
   - 主页: index.md
-  - 网络相关函数: network-functions.md
+  - 日期时间相关函数: datetime-functions.md
   - 地理相关函数: geo-functions.md
   - JSON 相关函数: json-functions.md
+  - 网络相关函数: network-functions.md
   - 文本相关函数: text-functions.md
 
 # Theme
