--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
 
     <repositories>
         <repository>
-            <id>conjars</id>
-            <url>https://conjars.org/repo</url>
+            <id>conjars.org</id>
+            <url>https://conjars.wensel.net/repo/</url>
         </repository>
     </repositories>
 
@@ -21,25 +21,25 @@
         <project.encoding>UTF-8</project.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-        <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
-        <maven-jar-plugin.version>3.2.0</maven-jar-plugin.version>
-        <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
-        <maven-surefire-plugin.version>3.0.0-M8</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.0.0-M8</maven-failsafe-plugin.version>
+        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
+        <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
+        <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
+        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
 
-        <junit.version>5.9.2</junit.version>
+        <junit.version>5.10.0</junit.version>
 
         <hive.version>2.3.8</hive.version>
         <hadoop.version>2.10.1</hadoop.version>
 
-        <guava.version>31.1-jre</guava.version>
-        <jackson.version>2.14.2</jackson.version>
-        <jsonpath.version>2.7.0</jsonpath.version>
+        <guava.version>32.1.1-jre</guava.version>
+        <jackson.version>2.15.2</jackson.version>
+        <jsonpath.version>2.8.0</jsonpath.version>
         <gson.version>2.10.1</gson.version>
         <spatial4j.version>0.8</spatial4j.version>
         <jts.verion>1.19.0</jts.verion>
-        <openkit-java.version>2.2.0</openkit-java.version>
+        <openkit-java.version>3.1.0</openkit-java.version>
     </properties>
 
     <dependencies>
@@ -79,6 +79,10 @@
                 <exclusion>
                     <artifactId>com.google.guava</artifactId>
                     <groupId>guava</groupId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.pentaho</groupId>
+                    <artifactId>pentaho-aggdesigner-algorithm</artifactId>
                 </exclusion>
             </exclusions>
         </dependency>
