--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,10 +28,11 @@ theme:
   search_index_only: true
   language: zh
   features:
+    - content.code.copy
+    - navigation.indexes
     - navigation.top
     - search.highlight
     - search.suggest
-    - tabs
   palette:
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -70,27 +71,21 @@ extra:
 extra_css:
   - css/image.css
   - css/table.css
-  - css/google-adsense.css
 extra_javascript:
   - js/math.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
 
-# Markdown extensions
 markdown_extensions:
-  - admonition
   - abbr
+  - admonition
   - attr_list
   - def_list
   - footnotes
-  - meta
   - md_in_html
-  - tables
+  - meta
   - toc:
       permalink: true
-      slugify: !!python/object/apply:pymdownx.slugs.slugify
-        kwds:
-          case: lower
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
@@ -99,16 +94,21 @@ markdown_extensions:
   - pymdownx.critic
   - pymdownx.details
   - pymdownx.emoji:
-      emoji_index: !!python/name:materialx.emoji.twemoji
-      emoji_generator: !!python/name:materialx.emoji.to_svg
-  - pymdownx.highlight
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
   - pymdownx.inlinehilite
   - pymdownx.keys
   - pymdownx.magiclink:
+      normalize_issue_symbols: true
       repo_url_shorthand: true
       user: leovan
-      repo: cytoscape-manual
+      repo: hive-functions
   - pymdownx.mark
+  - pymdownx.snippets
   - pymdownx.smartsymbols
   - pymdownx.superfences:
       custom_fences:
@@ -117,6 +117,10 @@ markdown_extensions:
           format: !!python/name:pymdownx.superfences.fence_code_format
   - pymdownx.tabbed:
       alternate_style: true
+      combine_header_slug: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
   - pymdownx.tasklist:
       custom_checkbox: true
   - pymdownx.tilde
