--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 # Website information
 site_name: Hive 函数
 site_url: https://hive-functions.leovan.tech
-site_author: Leo Van | 范叶亮
+site_author: 范叶亮 | Leo Van
 site_description: Hive 函数
 
 # Repository
@@ -10,7 +10,7 @@ repo_url: https://github.com/leovan/hive-functions
 edit_uri: edit/main/docs/
 
 # Copyright
-copyright: 版权所有 &copy; 2021-2023, Leo Van | 范叶亮
+copyright: 版权所有 &copy; 2021-2024，<a href="https://leovan.me" target="_blank">范叶亮 | Leo Van</a>
 
 # Navigation
 nav:
@@ -85,7 +85,11 @@ markdown_extensions:
   - md_in_html
   - meta
   - toc:
+      toc_depth: 3
       permalink: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
   - pymdownx.arithmatex:
       generic: true
   - pymdownx.betterem:
