--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,12 @@
 
     <repositories>
         <repository>
-            <id>conjars.org</id>
+            <id>conjars</id>
             <url>https://conjars.wensel.net/repo/</url>
+        </repository>
+        <repository>
+            <id>geotools</id>
+            <url>https://repo.osgeo.org/repository/geotools-releases/</url>
         </repository>
     </repositories>
 
@@ -21,25 +25,28 @@
         <project.encoding>UTF-8</project.encoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <maven-compiler-plugin.version>3.11.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.12.1</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
         <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
-        <maven-shade-plugin.version>3.5.0</maven-shade-plugin.version>
-        <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
-        <maven-failsafe-plugin.version>3.1.2</maven-failsafe-plugin.version>
+        <maven-shade-plugin.version>3.5.1</maven-shade-plugin.version>
+        <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+        <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
 
-        <junit.version>5.10.0</junit.version>
+        <junit.version>5.10.2</junit.version>
 
         <hive.version>2.3.8</hive.version>
         <hadoop.version>2.10.1</hadoop.version>
 
-        <guava.version>32.1.1-jre</guava.version>
-        <jackson.version>2.15.2</jackson.version>
-        <jsonpath.version>2.8.0</jsonpath.version>
+        <elasticsearch-geo.version>8.12.1</elasticsearch-geo.version>
+        <gt-main.version>30.1</gt-main.version>
+        <gt-epsg-hsql.version>30.2</gt-epsg-hsql.version>
         <gson.version>2.10.1</gson.version>
-        <spatial4j.version>0.8</spatial4j.version>
+        <guava.version>33.0.0-jre</guava.version>
+        <jackson.version>2.16.1</jackson.version>
         <jts.verion>1.19.0</jts.verion>
-        <openkit-java.version>3.1.0</openkit-java.version>
+        <openkit-java.version>3.2.0</openkit-java.version>
+        <jsonpath.version>2.9.0</jsonpath.version>
+        <spatial4j.version>0.8</spatial4j.version>
     </properties>
 
     <dependencies>
@@ -88,11 +95,30 @@
         </dependency>
 
         <dependency>
+            <groupId>org.elasticsearch</groupId>
+            <artifactId>elasticsearch-geo</artifactId>
+            <version>${elasticsearch-geo.version}</version>
+        </dependency>
+        <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
             <version>${guava.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-epsg-hsql</artifactId>
+            <version>${gt-epsg-hsql.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.geotools</groupId>
+            <artifactId>gt-main</artifactId>
+            <version>${gt-main.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -119,16 +145,6 @@
             <version>${jsonpath.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>${gson.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.locationtech.spatial4j</groupId>
-            <artifactId>spatial4j</artifactId>
-            <version>${spatial4j.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.locationtech.jts</groupId>
             <artifactId>jts</artifactId>
             <version>${jts.verion}</version>
@@ -149,6 +165,11 @@
             <groupId>com.dynatrace.openkit</groupId>
             <artifactId>openkit-java</artifactId>
             <version>${openkit-java.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.locationtech.spatial4j</groupId>
+            <artifactId>spatial4j</artifactId>
+            <version>${spatial4j.version}</version>
         </dependency>
 
         <dependency>
