--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,7 +10,7 @@ repo_url: https://github.com/leovan/hive-functions
 edit_uri: edit/main/docs/
 
 # Copyright
-copyright: 版权所有 &copy; 2021-2024，<a href="https://leovan.me" target="_blank">范叶亮 | Leo Van</a>
+copyright: 版权所有 &copy; 2021-2025，<a href="https://leovan.me" target="_blank">范叶亮 | Leo Van</a>
 
 # Navigation
 nav:
@@ -39,22 +39,21 @@ theme:
       primary: yellow
       accent: yellow
       toggle:
-        icon: material/weather-night
-        name: 暗黑
+        icon: material/brightness-7
+        name: 切换至暗黑模式
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
       primary: yellow
       accent: yellow
       toggle:
-        icon: material/white-balance-sunny
-        name: 明亮
+        icon: material/brightness-4
+        name: 切换至明亮模式
   favicon: images/hive-functions-icon.png
   logo: images/hive-functions-icon.png
 
 # Plugins
 plugins:
-  - search:
-      lang: en
+  - search
 
 # Extra
 extra:
