--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,13 +19,11 @@ jobs:
           server-id: central
           server-username: MAVEN_CENTER_USERNAME
           server-password: MAVEN_CENTER_PASSWORD
-          gpg-private-key: GPG_PRIVATE_KEY
-          gpg-passphrase: GPG_PASSPHRASE
 
       - name: Publish package
-        run: mvn --batch-mode deploy
+        run: mvn --batch-mode deploy -Dgpg.signer=bc
         env:
           MAVEN_CENTER_USERNAME: ${{ secrets.MAVEN_CENTER_USERNAME }}
           MAVEN_CENTER_PASSWORD: ${{ secrets.MAVEN_CENTER_PASSWORD }}
-          GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          MAVEN_GPG_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
